fixed text spacing computer

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ ul {
   }
 
   .musicCats {
-      margin: 0px 0% 0px 0%;
+      margin: 0px 0%;
   }
 
   #spacing {
@@ -256,7 +256,7 @@ ul {
   }
 
   #musicPage {
-    margin: 0px 12% 0px 12%;
+    margin: 0px 12%;
     text-align: center;
   }
 
@@ -370,12 +370,16 @@ ul {
   }
 
   .musicCats {
-    margin: 0px 10% 0px 10%;
+    margin: 0px 10%;
   }
 
   #musicPage {
-    margin: 0px 32% 0px 32%;
+    margin: 0px 10% 0px 8%;
     text-align: center;
+  }
+
+  #spacing {
+    margin: 10px 0px;
   }
 
   #musiCat1 {
@@ -388,6 +392,10 @@ ul {
 
   #musiCat3 {
     width: 25%;
+  }
+
+  #musiCat1:hover,  #musiCat2:hover, #musiCat3:hover {
+    cursor: pointer;
   }
 }
 /* end of computer media query */
